Update dependencies to newest versions

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "migrate": "truffle migrate"
   },
   "dependencies": {
-    "@0x/sol-coverage": "^1.0.3",
-    "@0x/sol-profiler": "^1.0.3",
-    "@0x/sol-trace": "^1.0.3",
+    "@0x/sol-compiler": "^3.0.2",
+    "@0x/sol-coverage": "^2.0.2",
+    "@0x/sol-profiler": "^2.0.3",
+    "@0x/sol-trace": "^2.0.3",
     "@0x/subproviders": "^2.1.11",
     "istanbul": "^0.4.5",
     "truffle": "^5.0.2",
